<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/nav_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/TealBlue"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="@string/toolbar_ajustes"
                app:titleTextColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="393dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="274dp"
                android:background="@drawable/border"
                android:text="@string/idioma"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.361" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/suggestions"
                android:layout_width="338dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="305dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="362dp"
                android:background="@drawable/border"
                android:text="@string/sugerencias"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/darkMode"
                android:layout_width="343dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="208dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="453dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="@string/modo_oscuro"
                android:textAlignment="center" />

        </RelativeLayout>


    </androidx.drawerlayout.widget.DrawerLayout>


</androidx.constraintlayout.widget.ConstraintLayout>